@@ -1,5 +1,9 @@
 # ChangeLog for vserver-utils
 
+  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/commands/status.sh,
+  scripts/lib/vps.sh, src/lockfile.c:
+  Fix status command logic
+
   22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/commands/start.sh,
   scripts/commands/stop.sh, scripts/lib/vps.sh:
   Fix start/stop exit codes
